toolchain/internal/core/analysis/testdata/errors/rpcs/duplicate_proc.ufo
// @expect: E501

rpc Users {
	proc GetUser {
		input { id: string }
		output { name: string }
	}
	proc GetUser {
		input { email: string }
		output { name: string }
	}
}
